taskimages/activestandby/dioscuri/test-data/check-secrets/test1-seed-ingresslist.json
{
    "kind": "IngressList",
    "apiVersion": "networking.k8s.io/v1",
    "metadata": {},
    "items": [
        {
            "kind": "Ingress",
            "apiVersion": "networking.k8s.io/v1",
            "metadata": {
                "name": "example.com",
                "namespace": "active-main",
                "resourceVersion": "2",
                "creationTimestamp": null,
                "labels": {
                    "activestandby.lagoon.sh/migrate": "true"
                }
            },
            "spec": {
                "tls": [
                    {
                        "secretName": "example.com-tls"
                    }
                ],
                "rules": [
                    {
                        "host": "example.com",
                        "http": {
                            "paths": [
                                {
                                    "path": "/",
                                    "pathType": "Prefix",
                                    "backend": {
                                        "service": {
                                            "name": "http",
                                            "port": {
                                                "name": "http"
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    }
                ]
            },
            "status": {
                "loadBalancer": {}
            }
        }
    ]
}
